--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,24 @@ img {
 }
 
 /* 하이퍼링크의 언더라인을 표시하지 않음 */
-a {
+a:link {
+  color: blue;
+  background-color: transparent;
   text-decoration: none;
+}
+a:visited {
+  color: purple;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  background-color: powderblue;
+  text-decoration: underline;
+}
+a:active {
+  color: orange;
+  background-color: transparent;
+  text-decoration: underline;
 }
 
 /* address 태그 브라우저 기본값 */
