--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,46 @@
 body {
   font-family: 'Nanum Gothic', sans-serif;
+  font-weight: 400;
   line-height: 28px; background-color: cornsilk;
   margin-top: 20px; margin-bottom: 20px;
   margin-left: 40px; margin-right: 40px;
 }
 
+/* 하이퍼링크의 언더라인을 표시하지 않음 */
+a:link {
+  color: blue;
+  background-color: transparent;
+  text-decoration: none;
+  border-bottom: 1px solid blue;
+  padding-bottom: 2px;
+}
+a:visited {
+  color: purple;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  background-color: powderblue;
+  text-decoration: none;
+}
+a:active {
+  color: orange;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+/* address 태그 브라우저 기본값 */
+/* address {
+  display: block;
+  font-style: italic;
+} */
+
 h1, h2, h3, h4, h5, h6 {
   padding: 14px;
-  /* padding-top: 7px;
-  padding-bottom: 7px;
-  padding-left: 7px;
-  padding-right: 7px; */
+  /* padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 14px;
+  padding-right: 14px; */
 }
 h1 {
   border: 2px solid cornflowerblue;
@@ -26,29 +56,17 @@ img {
   height: auto !important;
 }
 
-/* 하이퍼링크의 언더라인을 표시하지 않음 */
-a:link {
-  color: blue;
-  background-color: transparent;
+abbr, ins {
   text-decoration: none;
-}
-a:visited {
-  color: purple;
-  background-color: transparent;
-  text-decoration: none;
-}
-a:hover {
-  background-color: powderblue;
-  text-decoration: underline;
-}
-a:active {
-  color: orange;
-  background-color: transparent;
-  text-decoration: underline;
+  border-bottom: 1px solid black;
+  padding-bottom: 2px;
 }
 
-/* address 태그 브라우저 기본값 */
-/* address {
-  display: block;
-  font-style: italic;
-} */
+.agenda {
+  color: blue;
+  font-weight: bold;
+}
+
+.indent {
+  padding-left: 1.2em;
+}
