--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ a:active {
   font-style: italic;
 } */
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
   padding: 14px;
   /* padding-top: 14px;
   padding-bottom: 14px;
